# ill_mirror-takin2-tlibs2

./: .gitignore  CITATION.bib  CITATION.cff  CMakeLists.txt  LICENSE  LICENSE.txt  LICENSES  LITERATURE  README.md  REPOSITORIES
build_scripts/: Info.plist  build_dmg.sh
cmake/: FindLapacke.cmake  FindMinuit2.cmake  FindQCP.cmake  FindQhull.cmake
jl_mod/: jl.cpp  jl.h  tl2.jl
libs/: algos.h  bits.h  cam.h  expr.h  file.h  fit.h  glplot.cpp  glplot.h  h5file.h  helper.h  instr.h  jl.cpp  log.cpp  log.h  magdyn.h  magsg.h  mat.h  math17.h  math20.h  math_algos.h  mathlib.c  mathlib.h  maths.h  phys.h  str.h  traits.h  units.h  ver.h
libs/_cxx20/: glplot.cpp  glplot.h  math_algos.h
libs/instr/: base.h  base_loader.h  frm.h  macs.h  psi.h  raw.h  tax.h  trisp.h
libs/magdyn/: configuration.h  correlation.h  dispersion.h  file.h  generators.h  getters.h  groundstate.h  hamilton.h  helpers.h  magdyn.h  polarisation.h  precalc.h  structs.h  topology.h
libs/maths/: complex.h  constants.h  containers.h  coordtrafos.h  decls.h  diff.h  fourier.h  funcs.h  interp.h  lapack.h  ndim.h  operators.h  polygon.h  projectors.h  qhull.h  quaternion.h  scalar.h  solids.h  statistics.h  tensor.h  threedim.h
libs/qt/: gl.cpp  gl.h  glplot.cpp  glplot.h  helper.h  numerictablewidgetitem.h  recent.cpp  recent.h
script/: CMakeLists.txt  Makefile  Makefile_runtime
script/progs/: cryst.prog  fibo.prog
script/src/: ast.h  lexer.l  llasm.cpp  llasm.h  llasm_arr.cpp  llasm_func.cpp  llasm_ops.cpp  llasm_var.cpp  parser.cpp  parser.h  parser.y  printast.cpp  printast.h  runtime.cpp  sym.h
script/test/: cryst.prog  fibo.prog
swig_mod/: instr.i  magdyn.i  tl2.i
tests/: CMakeLists.txt  berry.cpp  comb.cpp  cov.cpp  cryst.cpp  detshape.cpp  eig.cpp  eig17.cpp  expr.cpp  fit0.cpp  fit1.cpp  h5file.cpp  hull1.cpp  la.cpp  leastsq.cpp  magsg.cpp  mat.cpp  mat0.cpp  mat1.cpp  mat2.cpp  mathlib.c  min.cpp  min1.cpp  ode.cpp  peaks.cpp  quat1.cpp  stat1.cpp
tests/jl/: fit.jl  tl2jl.dylib
tests/py/: ploy.gpl  tl2_instr.py  tl2_magdyn.py  tst1.py  tst_instr.py  tst_magdyn.py
tools/test/: cryst.cpp  expr.cpp  la.cpp  leastsq.cpp  magsg.cpp  mat1.cpp  usermutex.cpp
tools/test/jl/: tl2.jl
unittests/: CMakeLists.txt  blume.cpp  chol.cpp  chol2.cpp  cov.cpp  cryst.cpp  eig.cpp  expr.cpp  fft.cpp  fit1.cpp  hull1.cpp  magdyn.cpp  magdyn2.cpp  mat0.cpp  mat1.cpp  mat2.cpp  mat3.cpp  math.cpp  min0.cpp  min1.cpp  ode.cpp  rotation.cpp  units.cpp
